[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

actix-web = "4.6.0"
async-graphql = "7.0.5"
async-graphql-actix-web = "7.0.5"
sea-orm = { version = "0.12", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
  "with-chrono",
  "with-uuid",
  "debug-print",
  "with-json",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
log = "0.4.21"
